# real-time-stock-data-analysis

./: README.md  main.py  pyproject.toml
config/: config.py  logging.py
consumer/: consumer.py
converters/: deserializer.py  serializer.py
experiments/: kafka-consumer.ipynb  kafka-producer.ipynb  stock-data-api.ipynb
logs/: logs_parser.py
network/: pull.py  push.py
producer/: producer.py
